fix broken history